--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tpnote",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,14 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.30",
+    "@clerk/clerk-expo": "^2.3.10",
+    "@clerk/types": "^4.45.0",
+    "expo": "^52.0.11",
+    "expo-camera": "^16.0.14",
+    "expo-constants": "~17.0.5",
+    "expo-image": "^2.0.4",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.9",
+    "expo-secure-store": "^14.0.1",
+    "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~2.0.1",
+    "expo-video": "^2.0.5",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native-dotenv": "^0.2.2",
     "typescript": "^5.3.3"
   },
   "private": true
