Ajout d'un context pour les aliments selectionnés. Version fonctionnelle finale

--- a/app.json
+++ b/app.json
@@ -44,6 +44,12 @@
             "customBuildFlags": ["-DSQLITE_ENABLE_DBSTAT_VTAB=1 -DSQLITE_ENABLE_SNAPSHOT=1"]
           }
         }
+      ],
+      [
+        "expo-barcode-scanner",
+        {
+          "cameraPermission": "Autoriser $(PRODUCT_NAME) a accéder à votre caméra."
+        }
       ]
     ]
   }
